test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    workshop.openshift.io/etapa: automatizacion-namespace
    workshop.openshift.io/entorno: test
  annotations:
    openshift.io/description: Namespace de prueba del workshop
    openshift.io/display-name: Test
